@@ -1,3 +1,11 @@
+User johns
+Date:
+
+    Add support for old PES HDTV recording.
+    Disable trickspeed hack, to prevent ffmpeg crash.
+    Makes X11 server arguments configurable.
+    Add german translation.
+
 User FireFly
 Date: Sun Nov 18 21:15:50 CET 2012
 
